Restore the view when the process is relaunched and it's on the SNI

When we move Discover into the SNI while updating, if Discover is
launched, it should restore the view.

BUG: 457204